--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "firebase": "^10.10.0",
     "framer-motion": "^11.0.24",
     "localforage": "^1.10.0",
     "lucide-react": "^0.364.0",
