--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-autoplay": "^8.0.0",
+    "embla-carousel-react": "^8.0.0",
     "firebase": "^10.10.0",
     "framer-motion": "^11.0.24",
     "localforage": "^1.10.0",
@@ -30,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-router-dom": "^6.22.3",
+    "react-wrap-balancer": "^1.1.0",
     "sonner": "^1.4.41",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.2.2",
