--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "sn": "yarn shadcn-ui",
     "sna": "yarn shadcn-ui add",
-    "dev": "vite --port 3001",
-    "devh": "vite --port 3001 --host",
+    "dev": "vite",
+    "devh": "vite --host",
     "build": "vite build",
     "deploy": "yarn build && firebase deploy",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -23,13 +23,14 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "cmdk": "^1.0.0",
+    "cmdk": "^0.2.0",
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
     "firebase": "^10.10.0",
