--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
@@ -45,7 +46,6 @@
     "react-hook-form": "^7.51.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
-    "react-wrap-balancer": "^1.1.0",
     "sonner": "^1.4.41",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.2.2",
