--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.51.2",
     "react-query": "^3.39.3",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.22.3",
     "sonner": "^1.4.41",
     "sort-by": "^1.2.0",
