--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@smastrom/react-rating": "^1.5.0",
     "@tanstack/react-query": "^5.29.2",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
@@ -47,7 +48,6 @@
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.51.2",
     "react-query": "^3.39.3",
-    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.22.3",
     "sonner": "^1.4.41",
     "sort-by": "^1.2.0",
